# aoc2022

./: .rustfmt.toml  Cargo.toml
proto/: day5.py
src/: day_eight.rs  day_eleven.rs  day_five.rs  day_four.rs  day_nine.rs  day_one.rs  day_seven.rs  day_six.rs  day_ten.rs  day_three.rs  day_twelve.rs  day_two.rs  lib.rs  main.rs  question.rs
tests/: day_eight.rs  day_eleven.rs  day_five.rs  day_four.rs  day_nine.rs  day_one.rs  day_seven.rs  day_six.rs  day_ten.rs  day_three.rs  day_twelve.rs  day_two.rs
