[package]
name = "aoc2022"
version = "0.1.0"
authors = ["xyl0o <xyl0o@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
trees = "0.4.2"
