[package]
name = "aoc2022"
version = "0.1.0"
authors = ["xyl0o <xyl0o@posteo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
indexmap = "1.9.2"
indoc = "1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
ndarray = "0.15.6"
rctree = "0.5.0"
regex = "1.7.0"
